fix: Fonts Size, Margin on Mobile View

--- a/_sass/teatime.scss
+++ b/_sass/teatime.scss
@@ -1312,7 +1312,7 @@ section {
             }
 
             .post-title {
-                margin-top: 2rem;
+                margin-top: 3rem;
             }
 
             .post-category {
@@ -1332,16 +1332,17 @@ section {
                     padding: 0;
                 }
 
-                > p.infor {
-                    font-size: 0.75rem;
-                }
-
                 > p.refer {
                     margin-top: 2rem;
                 }
 
                 > p {
                     text-indent: 0.5rem;
+                    line-height: 2.25;
+                }
+
+                > h2 {
+                    margin: 1.5rem 0 1rem;
                 }
 
                 p,
@@ -1378,7 +1379,7 @@ section {
                     }
 
                     p {
-                        font-size: 0.75rem;
+                        font-size: 0.875rem;
                     }
                 }
             }
@@ -1489,7 +1490,8 @@ section {
 
                 @include media-query($mobile-width) {
                     padding: 4px 6px;
-                    font-size: 0.75rem;
+                    margin: 0 8px;
+                    font-size: 0.875rem;
                     vertical-align: middle;
                 }
             }
